# java-example

./: README.md  readme.md
src/main/: meson.build
src/main/com/squidfarts/idea/: Main.java
